Fixed issue where draw actions were not centered properly. Also removed the background color/box shadow so they properly blend in the floating panel. This now also looks good on mobile.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -200,8 +200,6 @@ html, body, #map, #app, .wrapper {
 }
 
 #edit_route_draw_actions_container .leaflet-draw-actions {
-    background-color: rgb(78, 93, 108);
-    box-shadow: 3px 0 3px rgba(0, 0, 0, 0.2);
     -webkit-transition: all 0.2s;
     -o-transition: all 0.2s;
     transition: all 0.2s;
@@ -209,11 +207,6 @@ html, body, #map, #app, .wrapper {
     top: unset !important;
     position: unset !important;
     left: unset !important;
-    /*position: fixed;*/
-    /*left: 50%;*/
-    /*transform: translateX(-50%);*/
-    /*bottom: 94px;*/
-    /*top: unset !important;*/
 }
 
 #edit_route_draw_actions_container .leaflet-draw-actions li {
